# Smartstride

./: .gitignore  RAG.py  README.md  main.py  pyproject.toml  requirements.txt
data/: strava_data.csv
src/api_methods/: authorize.py  get_methods.py
src/data_preprocessing/: main.py
tmp/: agents.db
tmp/lancedb/strava_knowledge.lance/_transactions/: 0-8858eda4-dbfe-4bbd-aceb-7622718b9384.txn
tmp/lancedb/strava_knowledge.lance/_versions/: 1.manifest
