[project]
name = "smart-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno[docling]>=1.7.7",
    "aiofiles>=24.1.0",
    "chromadb>=1.0.15",
    "docling>=2.43.0",
    "duckdb>=1.3.2",
    "environs>=14.3.0",
    "fastapi>=0.116.1",
    "google-genai>=1.28.0",
    "groq>=0.31.0",
    "huggingface-hub>=0.34.3",
    "lancedb>=0.24.2",
    "numpy>=2.3.2",
    "ollama>=0.5.2",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "sentence-transformers>=5.0.0",
    "sqlalchemy>=2.0.42",
    "stravalib>=2.4",
    "tantivy>=0.24.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]
